# envguard

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  package.yml
config/: default.toml  example-manifest.json
docs/: architecture.md  command-reference.md  contributing.md  limitations.md  macos-install.md  permissions.md  threat-model.md  troubleshooting.md  update-model.md
docs/adrs/: 0001-macos-only-initial-version.md  0002-no-cuda-on-macos.md  0003-checksum-only-updates.md  0004-managed-execution-model.md
envg/: README.md  main.py  pyproject.toml
envg/src/envguard/: __main__.py  cli.py  detect.py  doctor.py  exceptions.py  models.py  preflight.py
envg/src/envguard/launch/: launch_agent.py  shell_hooks.py
envg/src/envguard/lock/: __init__.py  manager.py
envg/src/envguard/macos/: xcode.py
envg/src/envguard/project/: __init__.py  discovery.py  resolution.py
envg/src/envguard/publish/: __init__.py  builder.py
envg/src/envguard/reports/: __init__.py
envg/src/envguard/resolver/: pypi_resolver.py  uv_backend.py
envg/src/envguard/security/: signatures.py
envg/src/envguard/update/: __init__.py  manifest.py
examples/broken-mixed/: README.md  environment.yml  setup.py
examples/conda-env/: conda_demo.py  environment.yml
examples/cuda-unsupported/: README.md  cuda_demo.py  environment.yml  requirements.txt
examples/mps-intent/: mps_demo.py  pyproject.toml
examples/pip-simple/: pip_simple_demo.py  pyproject.toml  requirements.txt
examples/pyproject-based/: pyproject.toml  pyproject_demo.py
examples/requirements-txt/: app.py  requirements.txt
launchd/: com.envguard.update.plist
scripts/: bootstrap.sh  install-launch-agent.sh  install-shell-hooks.sh  uninstall-launch-agent.sh  uninstall-shell-hooks.sh
src/envguard/: __init__.py  cli.py  detect.py  doctor.py  exceptions.py  installer.py  logging.py  models.py  preflight.py  repair.py  rules.py  state.py
src/envguard/launch/: __init__.py  launch_agent.py  runner.py  shell_hooks.py
src/envguard/macos/: __init__.py  paths.py  permissions.py  rosetta.py  system_install.py  xcode.py
src/envguard/project/: discovery.py  intent.py  lifecycle.py  resolution.py
src/envguard/publish/: uploader.py
src/envguard/reports/: __init__.py  health.py  json_report.py
src/envguard/resolver/: __init__.py  base.py  conda_backend.py  inference.py  markers.py  pip_backend.py  wheelcheck.py
src/envguard/security/: __init__.py  signatures.py  trust.py
src/envguard/update/: __init__.py  manifest.py  rollback.py  updater.py  verifier.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_cli.py  test_discovery.py  test_rules_integration.py
tests/unit/: test_detect.py  test_exceptions.py  test_launch_agent.py  test_models.py  test_permissions.py  test_rules.py  test_security.py  test_shell_hooks.py  test_state.py  test_update_manifest.py  test_wheelcheck.py
