[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envguard"
version = "0.1.0"
description = "macOS-first Python environment orchestration framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Rohan R" },
]
keywords = ["python", "environment", "macos", "orchestration", "virtualenv", "conda"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0;python_version<\"3.11\"",
    "tomli_w",
    "requests>=2.28",
    "packaging>=23.0",
    "pathspec>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-mock",
    "mypy>=1.0",
    "ruff>=0.1",
    "types-requests",
]

[project.scripts]
envguard = "envguard.cli:app"

[project.urls]
Homepage = "https://github.com/rotsl/envguard"
Repository = "https://github.com/rotsl/envguard"
Issues = "https://github.com/rotsl/envguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/envguard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "macos_only: marks tests that only run on macOS",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # typer.Argument/Option calls in defaults are intentional (Typer pattern)
    "SIM102", # nested if statements -- readability preference
    "SIM103", # return negated condition -- readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["envguard"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
modules = ["envguard", "tests"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["tomli", "tomli_w"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "envguard.resolver.inference",
    "envguard.project.discovery",
]
warn_unused_ignores = false

[tool.coverage.run]
source = ["envguard"]
branch = true
omit = [
    "tests/*",
    "src/envguard/cli.py",  # CLI entry point
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
