[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mps-demo"
version = "0.1.0"
description = "Apple MPS (Metal Performance Shaders) demo for envguard testing"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "torchaudio>=2.0",
]

[tool.envguard.accelerator]
target = "mps"
fallback = "cpu"
