[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pip-simple-demo"
version = "0.1.0"
description = "A simple pip-based project for envguard testing"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "numpy>=1.24",
    "click>=8.1",
]

[project.scripts]
pip-simple-demo = "pip_simple_demo:main"
