[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyproject-demo"
version = "0.2.0"
description = "A modern pyproject-only project for envguard testing"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "typer>=0.9",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
ml = ["scikit-learn>=1.3", "pandas>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
